--- a/style.css
+++ b/style.css
@@ -36,8 +36,7 @@ section {
     padding: 10px;
     margin-bottom: 20px;
     width: 495px;
-    overflow: auto;
-    clear: both;
+    height: 315px;
     color: #333;
     background: #ebebeb;
 }
@@ -50,10 +49,19 @@ article {
     background: #777;
 }
 
+div {
+    font-weight: 550;
+    width: 455px;
+    padding: 15px;
+    margin-top: 10px;
+    color: #777;
+    background: #ebebeb;
+}
+
 p {
     font-weight: 550;
     width: 455px;
-    padding: 10px;
+    padding: 15px;
     margin-top: 10px;
     color: #777;
     background: #ebebeb;
@@ -62,8 +70,8 @@ p {
 aside {
     float: right;
     width: 445px;
-    height: 228px;
-    padding: 20px;
+    height: 315px;
+    padding: 10px;
     overflow: auto;
     clear: top;
     color: #333;
@@ -74,4 +82,8 @@ footer {
     padding: 20px;
     clear: both;
     background: #ebebeb;
+}
+
+h2 {
+    margin-top: 25px;
 }
